--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "avif-converter"
-version = "0.1.0"
+version = "0.5.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,7 +10,7 @@ bytesize = "1.1.0"
 clap = { version = "4.1.4", features = ["derive", "cargo"] }
 color-eyre = "0.6.2"
 hex = "0.4.3"
-image = "0.24.5"
+image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
 indicatif = { version = "0.17.3", features = ["rayon"] }
 md5 = "0.7.0"
 num_cpus = "1.15.0"
