--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "avif-converter"
+description = "Simple tool to batch convert multiple images to AVIF"
+authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
+license = "MIT"
 version = "1.0.1"
 edition = "2021"
+readme = ""
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -21,3 +25,8 @@ rayon = "1.6.1"
 rgb = "0.8.34"
 sha2 = { version = "0.10.6", features = ["asm", "asm-aarch64"] }
 spinoff = "0.7.0"
+
+[package.metadata.arch]
+arch = ["x86_64", "aarch64"]
+makedepends = ["cargo", "nasm"]
+pkgrel = "1"
