--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ clap = { version = "4.1.4", features = ["derive", "cargo"] }
 color-eyre = "0.6.2"
 dssim-core = "3.2.5"
 hex = "0.4.3"
-image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "webp", "avif-decoder"] }
 indicatif = { version = "0.17.3", features = ["rayon"] }
+load_image = { version = "3.0.3", features = ["avif", "webp"] }
 md5 = "0.7.0"
 num_cpus = "1.15.0"
 owo-colors = "3.5.0"
