--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ rgb = "0.8.34"
 sha2 = { version = "0.10.6", features = ["asm", "asm-aarch64"] }
 spinoff = "0.7.0"
 
-[package.metadata.arch]
+[package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
 makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
-pkgrel = "1"
+pkgrel = 1
