--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.1.5"
+version = "1.2.0"
 edition = "2021"
 readme = ""
 
@@ -36,3 +36,7 @@ spinoff = "0.7.0"
 arch = ["x86_64", "aarch64"]
 makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
 pkgrel = 1
+
+[profile.release]
+lto = "thin"
+opt-level = 3
