--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,23 +13,23 @@ readme = ""
 atomic_float = "0.1.0"
 bytesize = "1.1.0"
 clap = { version = "4.1.4", features = ["derive", "cargo"] }
-color-eyre = "0.6.2"
+color-eyre = {version = "0.6.2", default_features = false}
 dssim-core = "3.2.5"
-env_logger = "0.10.0"
+env_logger = {version = "0.10.0", default_features = false, features = ["auto-color"] }
 hex = "0.4.3"
 imgref = "1.9.4"
-indicatif = { version = "0.17.3", features = ["rayon"] }
+indicatif = { version = "0.17.3"}
 libavif = { version = "0.11.0", default_features = false, features = ["codec-dav1d"] }
 load_image = { version = "3.0.3", features = ["webp"] }
 log = "0.4.17"
-md5 = "0.7.0"
+md5 = {version = "0.7.0", default_features = false}
 num_cpus = "1.15.0"
 owo-colors = "3.5.0"
 rand = "0.8.5"
 ravif = "0.11.1"
 rayon = "1.6.1"
 rgb = "0.8.35"
-sha2 = { version = "0.10.6", features = ["asm", "asm-aarch64"] }
+sha2 = { version = "0.10.6", features = ["asm"] }
 spinoff = "0.7.0"
 
 [package.metadata.archlinux_pkgbuild]
@@ -38,5 +38,7 @@ makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
 pkgrel = 1
 
 [profile.release]
-lto = "thin"
+lto = true
 opt-level = 3
+codegen-units = 1
+panic = "abort"
