--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.2.6"
+version = "1.3.0"
 edition = "2021"
 readme = ""
 
@@ -11,15 +11,15 @@ readme = ""
 
 [dependencies]
 atomic_float = "0.1.0"
-bytesize = "1.1.0"
-clap = { version = "4.1.4", features = ["derive", "cargo"] }
+bytesize = "1.2.0"
+clap = { version = "4.1.13", features = ["derive", "cargo"] }
 color-eyre = {version = "0.6.2", default_features = false}
-dssim-core = "3.2.5"
+dssim-core = { version = "3.2.5", optional = true }
 env_logger = {version = "0.10.0", default_features = false, features = ["auto-color"] }
 hex = "0.4.3"
 imgref = "1.9.4"
 indicatif = { version = "0.17.3"}
-libavif = { version = "0.11.0", default_features = false, features = ["codec-dav1d"] }
+libavif = { version = "0.11.0", default_features = false, features = ["codec-dav1d"], optional = true }
 load_image = { version = "3.0.3", features = ["webp"] }
 log = "0.4.17"
 md5 = {version = "0.7.0", default_features = false}
@@ -27,8 +27,8 @@ num_cpus = "1.15.0"
 owo-colors = "3.5.0"
 rand = "0.8.5"
 ravif = "0.11.1"
-rayon = "1.6.1"
-rgb = "0.8.35"
+rayon = "1.7.0"
+rgb = "0.8.36"
 sha2 = { version = "0.10.6", features = ["asm"] }
 spinoff = "0.7.0"
 
@@ -36,6 +36,9 @@ spinoff = "0.7.0"
 arch = ["x86_64", "aarch64"]
 makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
 pkgrel = 1
+
+[features]
+ssim = ["dep:libavif", "dep:dssim-core"]
 
 [profile.release]
 lto = true
