--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.3.0"
+version = "1.3.1"
 edition = "2021"
 readme = ""
 
@@ -12,17 +12,21 @@ readme = ""
 [dependencies]
 atomic_float = "0.1.0"
 bytesize = "1.2.0"
-clap = { version = "4.1.13", features = ["derive", "cargo"] }
-color-eyre = {version = "0.6.2", default_features = false}
+clap = { version = "4.2.1", features = ["derive", "cargo"] }
+color-eyre = { version = "0.6.2", default_features = false }
 dssim-core = { version = "3.2.5", optional = true }
-env_logger = {version = "0.10.0", default_features = false, features = ["auto-color"] }
+env_logger = { version = "0.10.0", default_features = false, features = [
+    "auto-color",
+] }
 hex = "0.4.3"
 imgref = "1.9.4"
-indicatif = { version = "0.17.3"}
-libavif = { version = "0.11.0", default_features = false, features = ["codec-dav1d"], optional = true }
+indicatif = { version = "0.17.3" }
+libavif = { version = "0.11.0", default_features = false, features = [
+    "codec-dav1d",
+], optional = true }
 load_image = { version = "3.0.3", features = ["webp"] }
 log = "0.4.17"
-md5 = {version = "0.7.0", default_features = false}
+md5 = { version = "0.7.0", default_features = false }
 num_cpus = "1.15.0"
 owo-colors = "3.5.0"
 rand = "0.8.5"
