--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,27 +3,22 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.3.3"
+version = "1.4.0-1"
 edition = "2021"
 readme = ""
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-atomic_float = "0.1.0"
 bytesize = "1.2.0"
 clap = { version = "4.2.1", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.2", default_features = false }
-dssim-core = { version = "3.2.5", optional = true }
 env_logger = { version = "0.10.0", default_features = false, features = [
     "auto-color",
 ] }
 hex = "0.4.3"
 imgref = "1.9.4"
 indicatif = { version = "0.17.3" }
-libavif = { version = "0.11.0", default_features = false, features = [
-    "codec-dav1d",
-], optional = true }
 load_image = { version = "3.0.3", features = ["webp"] }
 log = "0.4.17"
 md5 = { version = "0.7.0", default_features = false }
@@ -40,9 +35,6 @@ spinoff = "0.7.0"
 arch = ["x86_64", "aarch64"]
 makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
 pkgrel = 1
-
-[features]
-ssim = ["dep:libavif", "dep:dssim-core"]
 
 [profile.release]
 lto = true
