--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.4.0-2"
+version = "1.4.0-3"
 edition = "2021"
 readme = ""
 
@@ -30,6 +30,7 @@ rayon = "1.7.0"
 rgb = "0.8.36"
 sha2 = { version = "0.10.6", features = ["asm"] }
 spinoff = "0.7.0"
+once_cell = "1.17.1"
 
 [package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
