--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rgb = "0.8.36"
 sha2 = { version = "0.10.6", features = ["asm"] }
 spinoff = "0.7.0"
 once_cell = "1.17.1"
+threadpool = "1.8.1"
 
 [package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
