--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = ""
 
 [dependencies]
 bytesize = "1.2.0"
-clap = { version = "4.2.5", features = ["derive", "cargo"] }
+clap = { version = "4", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.2", default_features = false }
 env_logger = { version = "0.10.0", default_features = false, features = [
     "auto-color",
@@ -24,7 +24,6 @@ md5 = { version = "0.7.0", default_features = false }
 num_cpus = "1.15.0"
 owo-colors = "3.5.0"
 rand = "0.8.5"
-ravif = "0.11.1"
 rgb = "0.8.36"
 sha2 = { version = "0.10.6", features = ["asm"] }
 spinoff = "0.7.0"
@@ -37,6 +36,11 @@ image = { version = "0.24.6", default-features = false, features = [
     "webp",
     "bmp",
 ] }
+rav1e = "0.6.4"
+thiserror = "1.0.40"
+rayon = "1.7.0"
+loop9 = "0.1.3"
+avif-serialize = "0.8.1"
 
 [package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
