--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.5.1"
+version = "1.6.0"
 edition = "2021"
 readme = ""
 
@@ -38,9 +38,15 @@ image = { version = "0.24.6", default-features = false, features = [
 ] }
 rav1e = "0.6.4"
 thiserror = "1.0.40"
-rayon = "1.7.0"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
+
+[dev-dependencies]
+criterion = { version = "0.4.0", features = ["html_reports"] }
+
+[[bench]]
+name = "check_pixel"
+harness = false
 
 [package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
@@ -48,7 +54,6 @@ makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
 pkgrel = 1
 
 [profile.release]
-lto = true
+lto = false
 opt-level = 3
-codegen-units = 1
 panic = "abort"
