--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = ""
 
 [dependencies]
 bytesize = "1.2.0"
-clap = { version = "4", features = ["derive", "cargo"] }
+clap = { version = "4.2.7", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.2", default_features = false }
 env_logger = { version = "0.10.0", default_features = false, features = [
     "auto-color",
@@ -36,10 +36,12 @@ image = { version = "0.24.6", default-features = false, features = [
     "webp",
     "bmp",
 ] }
-rav1e = "0.6.4"
+rav1e = { git = "https://github.com/xiph/rav1e" }
 thiserror = "1.0.40"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
+#jpegxl-rs = "0.6.1"
+
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
