--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.7.1"
+version = "1.7.2"
 edition = "2021"
 readme = ""
 
@@ -40,11 +40,11 @@ rav1e = { git = "https://github.com/xiph/rav1e" }
 thiserror = "1.0.40"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
-#jpegxl-rs = "0.6.1"
+notify-rust = { version = "4.8.0", features = ["images"] }
 
 
 [dev-dependencies]
-criterion = { version = "0.4.0", features = ["html_reports"] }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [[bench]]
 name = "check_pixel"
