--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "avif-converter"
 description = "Simple tool to batch convert multiple images to AVIF"
 authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
 license = "MIT"
-version = "1.8.0"
+version = "1.9.0"
 edition = "2021"
 readme = ""
 
@@ -41,14 +41,8 @@ thiserror = "1.0.40"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
 notify-rust = { version = "4.8.0", features = ["images"] }
+thread-priority = "0.13.1"
 
-
-[dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports"] }
-
-[[bench]]
-name = "check_pixel"
-harness = false
 
 [package.metadata.archlinux_pkgbuild]
 arch = ["x86_64", "aarch64"]
