--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ image = { version = "0.24.6", default-features = false, features = [
     "webp",
     "bmp",
 ] }
-rav1e = { git = "https://github.com/xiph/rav1e" }
+rav1e = { version = "0.6.6", default_features = false, features = ["threading", "asm"] }
 thiserror = "1.0.40"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
