--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,22 +11,22 @@ readme = ""
 
 [dependencies]
 bytesize = "1.2.0"
-clap = { version = "4.2.7", features = ["derive", "cargo"] }
+clap = { version = "4", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.2", default_features = false }
 env_logger = { version = "0.10.0", default_features = false, features = [
     "auto-color",
 ] }
 hex = "0.4.3"
 imgref = "1.9.4"
-indicatif = { version = "0.17.3" }
-log = "0.4.17"
+indicatif = { version = "0.17" }
+log = "0.4"
 md5 = { version = "0.7.0", default_features = false }
-num_cpus = "1.15.0"
+num_cpus = "1.16.0"
 owo-colors = "3.5.0"
 rand = "0.8.5"
 rgb = "0.8.36"
 sha2 = { version = "0.10.6", features = ["asm"] }
-spinoff = "0.7.0"
+spinoff = "0.8.0"
 once_cell = "1.17.1"
 threadpool = "1.8.1"
 image = { version = "0.24.6", default-features = false, features = [
@@ -37,11 +37,12 @@ image = { version = "0.24.6", default-features = false, features = [
     "bmp",
 ] }
 rav1e = { version = "0.6.6", default_features = false, features = ["threading", "asm"] }
-thiserror = "1.0.40"
+thiserror = "1.0"
 loop9 = "0.1.3"
 avif-serialize = "0.8.1"
 notify-rust = { version = "4.8.0", features = ["images"] }
 thread-priority = "0.13.1"
+notify = "6.0.1"
 
 
 [package.metadata.archlinux_pkgbuild]
