--- a/services/aviffolder.desktop
+++ b/services/aviffolder.desktop
@@ -8,14 +8,14 @@ X-KDE-Submenu=AVIF
 [Desktop Action avif-custom]
 Name=AVIF
 Icon=image
-Exec=File=%u ; avif-converter -N --quiet -q 80 -s 2 "$File"
+Exec=File=%u ; avif-converter avif -N --quiet -q 80 -s 2 "$File"
 
 [Desktop Action avif-preserve]
 Name=AVIF (keep old files)
 Icon=image
-Exec=File=%u ; avif-converter -N --quiet -q 80 -s 2 -k "$File"
+Exec=File=%u ; avif-converter avif -N --quiet -q 80 -s 2 -k "$File"
 
 [Desktop Action avif-name]
 Name=AVIF (keep names)
 Icon=image
-Exec=File=%u ; avif-converter -N --quiet -q 80 -s 2 -n same "$File"
+Exec=File=%u ; avif-converter avif -N --quiet -q 80 -s 2 -n same "$File"
