--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ blake2 = { version = "0.10.6" }
 rayon = { version = "1.10.0", optional = true }
 atomic_float = "1.1.0"
 arrayvec = "0.7.6"
+png = "0.17.16"
+kamadak-exif = "0.6.1"
 
 [profile.release]
 lto = false
